; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/iommu/extr_intel_qi.c_dmar_enable_qi_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/iommu/extr_intel_qi.c_dmar_enable_qi_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dmar_unit = type { i32 }

@.str = private unnamed_addr constant [28 x i8] c"dmar%d: QI is not supported\00", align 1
@DMAR_IECTL_REG = common dso_local global i32 0, align 4
@DMAR_IECTL_IM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dmar_enable_qi_intr(%struct.dmar_unit* %0) #0 {
  %2 = alloca %struct.dmar_unit*, align 8
  %3 = alloca i32, align 4
  store %struct.dmar_unit* %0, %struct.dmar_unit** %2, align 8
  %4 = load %struct.dmar_unit*, %struct.dmar_unit** %2, align 8
  %5 = call i32 @DMAR_ASSERT_LOCKED(%struct.dmar_unit* %4)
  %6 = load %struct.dmar_unit*, %struct.dmar_unit** %2, align 8
  %7 = call i32 @DMAR_HAS_QI(%struct.dmar_unit* %6)
  %8 = load %struct.dmar_unit*, %struct.dmar_unit** %2, align 8
  %9 = getelementptr inbounds %struct.dmar_unit, %struct.dmar_unit* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = sext i32 %10 to i64
  %12 = inttoptr i64 %11 to i8*
  %13 = call i32 @KASSERT(i32 %7, i8* %12)
  %14 = load %struct.dmar_unit*, %struct.dmar_unit** %2, align 8
  %15 = load i32, i32* @DMAR_IECTL_REG, align 4
  %16 = call i32 @dmar_read4(%struct.dmar_unit* %14, i32 %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* @DMAR_IECTL_IM, align 4
  %18 = xor i32 %17, -1
  %19 = load i32, i32* %3, align 4
  %20 = and i32 %19, %18
  store i32 %20, i32* %3, align 4
  %21 = load %struct.dmar_unit*, %struct.dmar_unit** %2, align 8
  %22 = load i32, i32* @DMAR_IECTL_REG, align 4
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @dmar_write4(%struct.dmar_unit* %21, i32 %22, i32 %23)
  ret void
}

declare dso_local i32 @DMAR_ASSERT_LOCKED(%struct.dmar_unit*) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @DMAR_HAS_QI(%struct.dmar_unit*) #1

declare dso_local i32 @dmar_read4(%struct.dmar_unit*, i32) #1

declare dso_local i32 @dmar_write4(%struct.dmar_unit*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
